-v0.1.1
    [5] code refactor
    [8] code refactor - review
    
-v0.1.0
    [3] reorganize file folders
    [1] init word scraper