@@ -1,6 +1,7 @@
 -v0.1.1
-    [5] code refactor
+    [11] add index as reviewer argument
     [8] code refactor - review
+    [5] code refactor
     
 -v0.1.0
     [3] reorganize file folders
